Fixed font layout shifts

--- a/assets/css/inter.css
+++ b/assets/css/inter.css
@@ -1,23 +1,4 @@
 /* assets/css/inter.css */
-@import url("https://rsms.me/inter/inter.css");
-
-:root {
-  --font-inter: "Inter", sans-serif;
-}
-
 body {
-  font-family: var(--font-inter), ui-sans-serif, system-ui, -apple-system,
-    BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
-    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
-    "Noto Color Emoji";
-  font-feature-settings: "ss03", "cv02", "cv11";
-}
-
-@supports (font-variation-settings: normal) {
-  body {
-    font-family: "Inter var", var(--font-inter), ui-sans-serif, system-ui,
-      -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue",
-      Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-      "Segoe UI Symbol", "Noto Color Emoji";
-  }
+  font-family: "Inter", sans-serif;
 }
